--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,15 +2,15 @@
 .tag-1 {
   display: none;
 }
-#wall .tag-2 {
+.tag-2 {
   display: none;
 }
-#wall .tag-3 {
+.tag-3 {
   display: none;
 }
-#wall .tag-4 {
+.tag-4 {
   display: none;
 }
-#wall .tag-5 {
+.tag-5 {
   display: none;
 }
