--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,16 +1,16 @@
 /* write your override styles here */
-.tag-1 {
+#wall .tag-1 {
   display: none;
 }
-.tag-2 {
+#wall .tag-2 {
   display: none;
 }
-.tag-3 {
+#wall .tag-3 {
   display: none;
 }
-.tag-4 {
+#wall .tag-4 {
   display: none;
 }
-.tag-5 {
+#wall .tag-5 {
   display: none;
 }
